# tech-challenge-fase5

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
configs/: model_config.yaml  monitoring_config.yaml  prometheus.yml
configs/grafana/dashboards/: datathon_overview.json
configs/grafana/provisioning/dashboards/: dashboards.yml
data/: raw.dvc
data/golden_set/: golden_set.json
data/knowledge_base/: 01_glossario_indicadores_tecnicos.txt  02_glossario_financeiro_geral.txt  03_analise_petrobras.txt  04_politicas_investimento.txt  05_indicadores_macroeconomicos.txt  06_conceitos_risco.txt  07_analise_tecnica_petr4.txt  08_setor_petroleo_gas.txt  09_modelo_lstm_explicacao.txt  10_estrategias_trading.txt  11_resultados_petrobras.txt  12_regulamentacao_mercado.txt
docs/: AB_TEST_REPORT.md  EDA_REPORT.md  LGPD_PLAN.md  MODEL_CARD.md  OWASP_MAPPING.md  RED_TEAM_REPORT.md  SYSTEM_CARD.md  TRAINING_REPORT.md
evaluation/: __init__.py  ab_test_prompts.py  llm_judge.py  ragas_eval.py
metrics/: ab_test_results.json  drift_report.json  explainability_fairness.json  guardrails_test_results.json  llm_judge_metrics.json  ragas_metrics.json  red_team_results.json
notebooks/: 01_eda.ipynb
scripts/: collect_all_data.py  generate_eda_notebook.py  generate_metadata.py  run_eda.py  run_explainability_fairness.py  run_red_team.py  test_agent_e2e.py  test_guardrails_real.py  test_tools_local.py
src/: __init__.py  data_collection.py
src/agent/: __init__.py  rag_pipeline.py  react_agent.py  tools.py
src/features/: __init__.py  feature_engineering.py
src/models/: __init__.py  baseline.py  hyperparameter_tuning.py  registry.py  train.py
src/monitoring/: __init__.py  drift.py  metrics.py  telemetry.py
src/security/: __init__.py  guardrails.py  pii_detection.py
src/serving/: Dockerfile  __init__.py  app.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_drift.py  test_features.py  test_guardrails.py  test_models.py
