[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "datathon-fase05"
version = "0.1.0"
description = "Datathon Fase 05 - FIAP Pós-Tech MLET"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Grupo XX", email = "grupo-xx@fiap.com.br"},
]

dependencies = [
    # Core ML
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "mlflow>=2.12.0",

    # LLM & Agent
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "openai>=1.30.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",

    # Data & Feature Store
    "yfinance>=0.2.40",
    "dvc>=3.50.0",
    "dvc-gdrive>=3.0.0",
    "pandera>=0.19.0",

    # Monitoring
    "evidently>=0.4.0",
    "prometheus-client>=0.20.0",

    # Security
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",

    # Evaluation
    "ragas>=0.1.0",
    "datasets>=2.19.0",

    # Observability
    "langfuse>=2.0.0",

    # Utils
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP"]
ignore = ["D100", "D104", "D102", "D203", "D213", "N803", "N806"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=30"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
